--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,13 +5,32 @@ permissions:
 
 on:
   push:
-    tags:
-      - "*"
+    branches:
+      - main
 
 jobs:
   backend-tests:
     name: "Go Build/Test"
     uses: ./.github/workflows/partial-tests.yml
+
+  tag:
+    name: "Publish Tag"
+    runs-on: ubuntu-latest
+    needs:
+      - backend-tests
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions-ecosystem/action-get-latest-tag@v1
+        id: get-latest-tag
+      - uses: actions-ecosystem/action-bump-semver@v1
+        id: bump-semver
+        with:
+          current_version: ${{ steps.get-latest-tag.outputs.tag }}
+          level: patch
+      - uses: actions-ecosystem/action-push-tag@v1
+        with:
+          tag: ${{ steps.bump-semver.outputs.new_version }}
+          message: "${{ steps.bump-semver.outputs.new_version }}: PR #${{ github.event.pull_request.number }} ${{ github.event.pull_request.title }}"
 
   goreleaser:
     name: "Release"
@@ -23,7 +42,6 @@ jobs:
         with:
           fetch-depth: 0
       - run: git fetch --force --tags
-
       - uses: actions/setup-go@v3
         with:
           go-version: ">=1.19.3"
