--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
   goreleaser:
     name: "Release"
     needs:
-      - backend-tests
+      - tag
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
