--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,8 +1,10 @@
 # This is an example .goreleaser.yml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
+version: 2
 before:
   hooks:
     - go mod tidy
+
 builds:
   - env:
       - CGO_ENABLED=0
@@ -16,70 +18,82 @@ builds:
       - arm64
     goarm:
       - "7"
+
 dockers:
   - use: buildx
     goos: linux
     goarch: arm
     goarm: 7
     image_templates:
-      - "ghcr.io/hay-kot/dynodns:latest"
-      - "ghcr.io/hay-kot/dynodns:{{ .Tag }}"
-      - "ghcr.io/hay-kot/dynodns:v{{ .Major }}"
-      - "ghcr.io/hay-kot/dynodns:latest"
+      - "ghcr.io/hay-kot/dynodns:{{ .Version }}-armv7"
+      - "ghcr.io/hay-kot/dynodns:latest-armv7"
     build_flag_templates:
+      - "--platform=linux/arm/v7"
       - "--pull"
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
       - "--label=org.opencontainers.image.version={{.Version}}"
+
   - use: buildx
     goos: linux
     goarch: arm64
     image_templates:
-      - "ghcr.io/hay-kot/dynodns:latest"
-      - "ghcr.io/hay-kot/dynodns:{{ .Tag }}"
-      - "ghcr.io/hay-kot/dynodns:v{{ .Major }}"
-      - "ghcr.io/hay-kot/dynodns:latest"
+      - "ghcr.io/hay-kot/dynodns:{{ .Version }}-arm64"
+      - "ghcr.io/hay-kot/dynodns:latest-arm64"
     build_flag_templates:
+      - "--platform=linux/arm64"
       - "--pull"
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
       - "--label=org.opencontainers.image.version={{.Version}}"
+
   - use: buildx
     goos: linux
     goarch: amd64
     image_templates:
-      - "ghcr.io/hay-kot/dynodns:latest"
-      - "ghcr.io/hay-kot/dynodns:{{ .Tag }}"
-      - "ghcr.io/hay-kot/dynodns:v{{ .Major }}"
-      - "ghcr.io/hay-kot/dynodns:latest"
+      - "ghcr.io/hay-kot/dynodns:{{ .Version }}-amd64"
+      - "ghcr.io/hay-kot/dynodns:latest-amd64"
     build_flag_templates:
+      - "--platform=linux/amd64"
       - "--pull"
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
       - "--label=org.opencontainers.image.version={{.Version}}"
+
+docker_manifests:
+  - name_template: ghcr.io/hay-kot/dynodns:{{ .Version }}
+    image_templates:
+      - ghcr.io/hay-kot/dynodns:{{ .Version }}-amd64
+      - ghcr.io/hay-kot/dynodns:{{ .Version }}-arm64
+      - ghcr.io/hay-kot/dynodns:{{ .Version }}-armv7
+  - name_template: ghcr.io/hay-kot/dynodns:latest
+    image_templates:
+      - ghcr.io/hay-kot/dynodns:latest-amd64
+      - ghcr.io/hay-kot/dynodns:latest-arm64
+      - ghcr.io/hay-kot/dynodns:latest-armv7
+
 archives:
-  - format: tar.gz
-    # this name template makes the OS and Arch compatible with the results of uname.
+  - formats: [tar.gz]
     name_template: >-
-      {{ .ProjectName }}_ {{- title .Os }}_ {{- if eq .Arch "amd64" }}x86_64 {{- else if eq .Arch "386" }}i386 {{- else }}{{ .Arch }}{{ end }} {{- if .Arm }}v{{ .Arm }}{{ end }}
-    # use zip for windows archives
+      {{ .ProjectName }}_{{- title .Os }}_{{- if eq .Arch "amd64" }}x86_64{{- else if eq .Arch "386" }}i386{{- else }}{{ .Arch }}{{ end }}{{- if .Arm }}v{{ .Arm }}{{ end }}
     format_overrides:
       - goos: windows
-        format: zip
+        formats: ["zip"]
+
 checksum:
   name_template: "checksums.txt"
+
 snapshot:
-  name_template: "{{ incpatch .Version }}-next"
+  version_template: "{{ incpatch .Version }}-next"
+
 changelog:
   sort: asc
   filters:
     exclude:
       - "^docs:"
       - "^test:"
-# The lines beneath this are called `modelines`. See `:help modeline`
-# Feel free to remove those if you don't want/use them.
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
 # vim: set ts=2 sw=2 tw=0 fo=cnqoj
