--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -25,7 +25,7 @@ dockers:
     goarch: arm
     goarm: 7
     image_templates:
-      - "ghcr.io/hay-kot/dynodns:{{ .Version }}-armv7"
+      - "ghcr.io/hay-kot/dynodns:v{{ .Version }}-armv7"
       - "ghcr.io/hay-kot/dynodns:latest-armv7"
     build_flag_templates:
       - "--platform=linux/arm/v7"
@@ -33,13 +33,13 @@ dockers:
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.version={{.Version}}"
+      - "--label=org.opencontainers.image.version=v{{.Version}}"
 
   - use: buildx
     goos: linux
     goarch: arm64
     image_templates:
-      - "ghcr.io/hay-kot/dynodns:{{ .Version }}-arm64"
+      - "ghcr.io/hay-kot/dynodns:v{{ .Version }}-arm64"
       - "ghcr.io/hay-kot/dynodns:latest-arm64"
     build_flag_templates:
       - "--platform=linux/arm64"
@@ -47,13 +47,13 @@ dockers:
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.version={{.Version}}"
+      - "--label=org.opencontainers.image.version=v{{.Version}}"
 
   - use: buildx
     goos: linux
     goarch: amd64
     image_templates:
-      - "ghcr.io/hay-kot/dynodns:{{ .Version }}-amd64"
+      - "ghcr.io/hay-kot/dynodns:v{{ .Version }}-amd64"
       - "ghcr.io/hay-kot/dynodns:latest-amd64"
     build_flag_templates:
       - "--platform=linux/amd64"
@@ -61,14 +61,14 @@ dockers:
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.version={{.Version}}"
+      - "--label=org.opencontainers.image.version=v{{.Version}}"
 
 docker_manifests:
-  - name_template: ghcr.io/hay-kot/dynodns:{{ .Version }}
+  - name_template: ghcr.io/hay-kot/dynodns:v{{ .Version }}
     image_templates:
-      - ghcr.io/hay-kot/dynodns:{{ .Version }}-amd64
-      - ghcr.io/hay-kot/dynodns:{{ .Version }}-arm64
-      - ghcr.io/hay-kot/dynodns:{{ .Version }}-armv7
+      - ghcr.io/hay-kot/dynodns:v{{ .Version }}-amd64
+      - ghcr.io/hay-kot/dynodns:v{{ .Version }}-arm64
+      - ghcr.io/hay-kot/dynodns:v{{ .Version }}-armv7
   - name_template: ghcr.io/hay-kot/dynodns:latest
     image_templates:
       - ghcr.io/hay-kot/dynodns:latest-amd64
@@ -87,7 +87,7 @@ checksum:
   name_template: "checksums.txt"
 
 snapshot:
-  version_template: "{{ incpatch .Version }}-next"
+  version_template: "v{{ incpatch .Version }}-next"
 
 changelog:
   sort: asc
